--- a/src/components/shop/ProductCard.module.scss
+++ b/src/components/shop/ProductCard.module.scss
@@ -96,7 +96,7 @@
 .productPrice {
   font-size: 18px;
   font-weight: 700;
-  color: #2d5016;
+  color: #1a1a1a;
   margin-bottom: $spacing-md;
   position: relative;
   display: block;
